fix filterbar z-index

--- a/src/app/styl/views/filter_bar.styl
+++ b/src/app/styl/views/filter_bar.styl
@@ -11,6 +11,7 @@ disabled-text-color = rgb(122, 122, 122, 1)
     top 120px
     left 0
     width: 100%
+    z-index: 1;
     -webkit-user-select: none
     position: absolute
     
